k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dork-backend-service
spec:
  type: LoadBalancer 
  selector:
    app: dork-backend
  ports:
    - protocol: TCP
      port: 80       
      targetPort: 9867
